Mon Aug  8 13:36:27 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Implemented --volume, --volume-smear and
	--volume-wobble, which work pretty much like the pitch detector, but
	are based on the volume (absolute value of the analytic signal from
	hilbert filter).
	These features should be usable to detect the characteristics of a
	tremolo.

Sun Aug  7 18:15:55 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Implemented --base-freq-smear and
	--base-freq-wobble to represent inaccuracy and rate of change for the
	pitch detector. These should be usable to detect the characteristics
	of a vibrato.
	Changed documentation to refer to the --base-freq* options as "pitch"
	related (instead of the old term: "keynote").

Sun Aug  7 14:32:03 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: To improve reliability and accuracy of the
	pitch detection, the user can now specify the expected base frequency.
	Specifying this hint is recommended whenever the base frequency is
	known, and only secondary features which depend on the base frequency,
	such as vibrato features, should be detected.

Tue Aug  2 18:22:07 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Added initial implementation for --base-freq,
	a base frequency finder (or as the help text describes the feature:
	detect keynote of a signal). The algorithm uses a complex signal
	generated by a hilbert filter.
	To see the complex signal that is being used, I also added
	--complex-signal, that is similar to --raw-signal.

Mon Aug  1 21:27:24 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Introduced --silence-threshold option, which
	can be used to customize zerocutting. Another new feature is
	--raw-signal, which just prints out the individual sample values.
	This is useful for using another program (i.e. gnuplot) to process
	sample data.

Sun Jul 31 16:11:13 2005  Tim Janik  <timj@gtk.org>
